--- a/CrysChess/src/Components/GameBoard.css
+++ b/CrysChess/src/Components/GameBoard.css
@@ -156,6 +156,13 @@
   background: linear-gradient(145deg, #66aaff, #003399);
 }
 
+.friend-btn-disabled {
+  background: #4caf50;
+  color: white;
+  cursor: default;
+}
+
+
 @keyframes hexaPulse {
   0% {
     transform: scale(1);
@@ -217,7 +224,7 @@
   display: flex;
   height: 100vh;
   width: 100%;
-  background: url("https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0")
+  background: url("../assets/3.png")
     no-repeat center center/cover;
   color: white;
   font-family: "Trebuchet MS", sans-serif;
@@ -260,6 +267,7 @@
   width: 100%;
   box-shadow: 0 4px 14px rgba(0, 0, 0, 0.5);
 }
+
 
 .profile-pic {
   width: 100px;
