new changes.. about to make online presence

--- a/CrysChess/src/Components/profilePage.css
+++ b/CrysChess/src/Components/profilePage.css
@@ -473,6 +473,12 @@ margin-top: 280px;
   border-radius: 50%;
   object-fit: cover;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    transition: border 0.3s;
+
+}
+
+.friendavatar.online {
+  border-color: green; /* online */
 }
 
 /* Friend info */
